addded debug mode at game , added water limit line in Beach chapter , fixed wallnut bowling belt mechanism